2006-11-04  Brian Warner  <warner@lothar.com>

	* buildbot/status/tinderbox.py
	(TinderboxMailNotifier.buildMessage): send out a "testfailed"
	status when the build results in WARNINGS. Patch from Dave
	Liebreich. Closes SF#1587352.

	* buildbot/slave/commands.py (LogFileWatcher.poll): overcome a
	linux-vs-osx behavior difference w.r.t. reading from files that
	have reached EOF. This should fix LogFileWatcher on OS-X. Thanks
	to Mark Rowe for the patch.

2006-10-15  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (IStatus.getURLForThing): oops, the
	method name was misspelled in the interface definition. Thanks to
	Roy Rapoport for the catch.

2006-10-13  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Adding LogObservers): update sample code
	to match the great Steps renaming

	* buildbot/steps/transfer.py (FileUpload.start): Fix stupid error.
	Maybe I should run my own unit tests before recording a big
	change. Good thing I've got a buildbot to remind me.

2006-10-12  Brian Warner  <warner@lothar.com>

	* buildbot/steps/transfer.py: rework __init__ and args setup
	* buildbot/slave/commands.py (SlaveFileDownloadCommand): minor
	docs improvements
	* buildbot/slave/commands.py (SlaveFileDownloadCommand.setup):
	when opening the target file, only catch IOError (to report via
	stderr/rc!=0), let the others be reported as normal exceptions

2006-10-08  Brian Warner  <warner@lothar.com>

	* contrib/svn_watcher.py: fix security holes by using proper argv
	arrays and subprocess.Popen() rather than commands.getoutput().
	Thanks to Nick Mathewson for the patch. Note that svn_watcher.py
	is deprecated in favor of buildbot/changes/svnpoller.py, and will
	probably be removed by the next release.
	* CREDITS: add Nick

2006-10-04  Brian Warner  <warner@lothar.com>

	* buildbot/steps/python.py (PyFlakes.createSummary): skip any
	initial lines that weren't emitted by pyflakes. When the pyflakes